<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:rowCount="3"
    tools:context=".MainActivity">

    <Button
        style="@style/ButtonCommonStyle"
        android:onClick="OnOpClick"
        android:background="@drawable/button_background"
        android:text="@string/sin"
        android:textAllCaps="false"/>
    <Button
        style="@style/ButtonCommonStyle"
        android:onClick="OnOpClick"
        android:background="@drawable/button_background"
        android:text="@string/cos"
        android:textAllCaps="false"/>
    <Button
        style="@style/ButtonCommonStyle"
        android:onClick="OnOpClick"
        android:background="@drawable/button_background"
        android:text="@string/tan"
        android:textAllCaps="false"/>
    <Button
        style="@style/ButtonCommonStyle"
        android:onClick="OnOpClick"
        android:background="@drawable/button_background"
        android:text="@string/pi"
        android:textAllCaps="false"/>
    <Button
        style="@style/ButtonCommonStyle"
        android:onClick="OnOpClick"
        android:background="@drawable/button_background"
        android:text="@string/ln"
        android:textAllCaps="false"/>
    <Button
        style="@style/ButtonCommonStyle"
        android:onClick="OnNumberClick"
        android:background="@drawable/button_background"
        android:text="@string/e"
        android:textAllCaps="false"/>
    <Button
        style="@style/ButtonCommonStyle"
        android:onClick="OnOpClick"
        android:background="@drawable/button_background"
        android:text="@string/left_bracket" />
    <Button
        style="@style/ButtonCommonStyle"
        android:onClick="OnOpClick"
        android:background="@drawable/button_background"
        android:text="@string/right_bracket" />
    <Button
        style="@style/ButtonCommonStyle"
        android:onClick="OnOpClick"
        android:background="@drawable/button_background"
        android:text="@string/lg"
        android:textAllCaps="false"/>
    <Button
        style="@style/ButtonCommonStyle"
        android:onClick="OnOpClick"
        android:background="@drawable/button_background"
        android:text="@string/pow"
        android:textAllCaps="false"/>
    <Button
        style="@style/ButtonCommonStyle"
        android:onClick="OnOpClick"
        android:background="@drawable/button_background"
        android:text="@string/sqrt"
        android:textAllCaps="false"/>
    <Button
        style="@style/ButtonCommonStyle"
        android:onClick="OnOpClick"
        android:background="@drawable/button_background"
        android:text="@string/fact"
        android:textAllCaps="false"/>

</GridLayout>